--- a/styles/main.css
+++ b/styles/main.css
@@ -39,6 +39,22 @@
 	position: relative;
 }
 
+.item figure.item-image::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #2e37a4;
+	opacity: 0;
+	transition: all 0.3s ease;
+}
+
+.item:hover figure.item-image::before {
+	opacity: 0.7;
+}
+
 .item figure.item-image svg.icon-play {
 	position: absolute;
 	width: 40px;
