--- a/styles/main.css
+++ b/styles/main.css
@@ -74,3 +74,45 @@
 .item:hover figure.item-image svg.icon-play {
 	opacity: 1;
 }
+
+.video-wrapper {
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 0;
+	z-index: 0;
+	width: 100%;
+	padding-bottom: 56.25%;
+}
+
+.video-wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.price-wrapper {
+	transition: all 0.5s ease-in-out;
+	position: fixed;
+	box-shadow: 0px -8px 15px rgba(0, 0, 0, 0.1);
+	bottom: 0;
+	width: 100%;
+}
+
+.price-wrapper-enter,
+.price-wrapper-exit-active {
+	opacity: 0;
+	bottom: -100%;
+}
+.price-wrapper-enter-active,
+.price-wrapper-exit {
+	opacity: 1;
+	bottom: 0;
+}
+.price-wrapper-enter-done {
+	opacity: 1;
+	bottom: 0;
+	position: fixed;
+}
